force-app/main/default/objects/Product_Interest__c/Product_Interest__c.object-meta.xml
<CustomObject>
    <label>Product Interest</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Product Interest  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>