force-app/main/default/objects/Product_Interest__c/fields/Est_Competitor_Hip_Procedure_Per_Program__c.field-meta.xml
<CustomField>
    <fullName>Est_Competitor_Hip_Procedure_Per_Program__c</fullName>
    <label>Est Competitor Hip Procedure Per Program</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>