force-app/main/default/objects/Product_Interest__c/fields/Estimated_Number_ZB_Hip_Per_Program__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_ZB_Hip_Per_Program__c</fullName>
    <label>Estimated Number ZB Hip Per Program</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>