force-app/main/default/objects/Product_Interest__c/fields/Estimated_Yearly_Pull_Thru_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Yearly_Pull_Thru_Amount__c</fullName>
    <label>Estimated Yearly Pull Thru Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>