force-app/main/default/objects/Product_Interest__c/fields/Fellowship_Program__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fellowship Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>