force-app/main/default/objects/Product_Interest__c/fields/Fellowship_Program_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Program_Picklist__c</fullName>
    <label>Fellowship Program Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fellowship_Programs</valueSetName>
    </valueSet>
</CustomField>