force-app/main/default/objects/Product_Interest__c/fields/Hospital_Account__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Account__c</fullName>
    <label>Hospital Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Interests (Hospital Account)</relationshipLabel>
    <relationshipName>Product_Interests1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>