force-app/main/default/objects/Product_Interest__c/fields/Incremental_Business__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Business__c</fullName>
    <label>Incremental Business Increased By Impact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>