force-app/main/default/objects/Product_Interest__c/fields/Next_Year_Hip_Procedure_Count__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_Hip_Procedure_Count__c</fullName>
    <label>Next Year Hip Procedure Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>