force-app/main/default/objects/Product_Interest__c/fields/Product_Pulled_Thru__c.field-meta.xml
<CustomField>
    <fullName>Product_Pulled_Thru__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Pulled Thru</label>
    <length>255</length>
    <type>Text</type>
</CustomField>