force-app/main/default/objects/Product_Interest__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Interests</relationshipLabel>
    <relationshipName>Product_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>