force-app/main/default/objects/Product_Interest__c/fields/Total_of_Impactors_Needed__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Impactors_Needed__c</fullName>
    <label>Total # of Impactors Needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>