force-app/main/default/objects/Product_Interest__c/fields/X021_Estimated_Surgery_Volume__c.field-meta.xml
<CustomField>
    <fullName>X021_Estimated_Surgery_Volume__c</fullName>
    <label>2021 Estimated Surgery Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>