force-app/main/default/objects/Product_Interest__c/fields/ZB_Procedures_Program__c.field-meta.xml
<CustomField>
    <fullName>ZB_Procedures_Program__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZB Procedures Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>