force-app/main/default/objects/Product_Interest__c/recordTypes/FellowShip_Program.recordType-meta.xml
<RecordType>
    <fullName>FellowShip_Program</fullName>
    <active>true</active>
    <label>FellowShip Program</label>
</RecordType>