force-app/main/default/objects/Product_Interest__c/recordTypes/Outgoing_Fellows.recordType-meta.xml
<RecordType>
    <fullName>Outgoing_Fellows</fullName>
    <active>true</active>
    <label>Outgoing Fellows</label>
</RecordType>